--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # State Management
   riverpod: ^2.4.9
   flutter_riverpod: ^2.4.9
+  riverpod_annotation: ^2.3.3
   
   # Networking
   dio: ^5.3.4
@@ -55,7 +56,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+  mockito: ^5.4.0
   flutter_lints: ^2.0.2
+  build_runner: ^2.3.3
+  riverpod_generator: ^2.3.9
 
 flutter:
   uses-material-design: true
