Refactor firebase.json to streamline configuration and update iOS appId

--- a/firebase.json
+++ b/firebase.json
@@ -1,41 +1,1 @@
-{
-    "flutter": {
-        "platforms": {
-            "android": {
-                "default": {
-                    "projectId": "si-gonggoo-app-pjh",
-                    "appId": "1:343081223442:android:76fc986aa044650abe9fcb",
-                    "fileOutput": "android/app/google-services.json"
-                }
-            },
-            "ios": {
-                "default": {
-                    "projectId": "si-gonggoo-app-pjh",
-                    "appId": "1:343081223442:ios:dcf1d2c62d550e15be9fcb",
-                    "uploadDebugSymbols": false,
-                    "fileOutput": "ios/Runner/GoogleService-Info.plist"
-                }
-            },
-            "macos": {
-                "default": {
-                    "projectId": "si-gonggoo-app-pjh",
-                    "appId": "1:343081223442:ios:dcf1d2c62d550e15be9fcb",
-                    "uploadDebugSymbols": false,
-                    "fileOutput": "macos/Runner/GoogleService-Info.plist"
-                }
-            },
-            "dart": {
-                "lib/firebase_options.dart": {
-                    "projectId": "si-gonggoo-app-pjh",
-                    "configurations": {
-                        "android": "1:343081223442:android:76fc986aa044650abe9fcb",
-                        "ios": "1:343081223442:ios:dcf1d2c62d550e15be9fcb",
-                        "macos": "1:343081223442:ios:dcf1d2c62d550e15be9fcb",
-                        "web": "1:343081223442:web:ad1ae058cbcfecdebe9fcb",
-                        "windows": "1:343081223442:web:68be9092819834b5be9fcb"
-                    }
-                }
-            }
-        }
-    }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"si-gonggoo-app-pjh","appId":"1:343081223442:android:76fc986aa044650abe9fcb","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"si-gonggoo-app-pjh","appId":"1:343081223442:ios:f21399a5600dee9abe9fcb","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"si-gonggoo-app-pjh","appId":"1:343081223442:ios:dcf1d2c62d550e15be9fcb","uploadDebugSymbols":false,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"si-gonggoo-app-pjh","configurations":{"ios":"1:343081223442:ios:f21399a5600dee9abe9fcb"}}}}}}
