--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.gonggooApp</string>
+	<string>com.watchman.gonggooApp</string>
 	<key>PROJECT_ID</key>
 	<string>si-gonggoo-app-pjh</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:343081223442:ios:dcf1d2c62d550e15be9fcb</string>
+	<string>1:343081223442:ios:f21399a5600dee9abe9fcb</string>
 </dict>
 </plist>
