--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<!-- 카메라 접근 추가 -->
+	<key>NSCameraUsageDescription</key>
+	<string>카메라에 접근이 필요한 이유를 설명하는 텍스트</string>
+	<!-- 사진 접근 추가 -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진 라이브러리 접근이 필요한 이유를 설명하는 텍스트</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>사진 추가 기능이 필요한 이유를 설명하는 텍스트</string>
 </dict>
 </plist>
