--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,41 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"si-gonggoo-app-pjh","appId":"1:343081223442:android:76fc986aa044650abe9fcb","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"si-gonggoo-app-pjh","appId":"1:343081223442:ios:f21399a5600dee9abe9fcb","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"si-gonggoo-app-pjh","appId":"1:343081223442:ios:dcf1d2c62d550e15be9fcb","uploadDebugSymbols":false,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"si-gonggoo-app-pjh","configurations":{"ios":"1:343081223442:ios:f21399a5600dee9abe9fcb"}}}}}}
+{
+    "flutter": {
+        "platforms": {
+            "android": {
+                "default": {
+                    "projectId": "si-gonggoo-app-pjh",
+                    "appId": "1:343081223442:android:76fc986aa044650abe9fcb",
+                    "fileOutput": "android/app/google-services.json"
+                }
+            },
+            "ios": {
+                "default": {
+                    "projectId": "si-gonggoo-app-pjh",
+                    "appId": "1:343081223442:ios:f21399a5600dee9abe9fcb",
+                    "uploadDebugSymbols": false,
+                    "fileOutput": "ios/Runner/GoogleService-Info.plist"
+                }
+            },
+            "macos": {
+                "default": {
+                    "projectId": "si-gonggoo-app-pjh",
+                    "appId": "1:343081223442:ios:dcf1d2c62d550e15be9fcb",
+                    "uploadDebugSymbols": false,
+                    "fileOutput": "macos/Runner/GoogleService-Info.plist"
+                }
+            },
+            "dart": {
+                "lib/firebase_options.dart": {
+                    "projectId": "si-gonggoo-app-pjh",
+                    "configurations": {
+                        "ios": "1:343081223442:ios:f21399a5600dee9abe9fcb"
+                    }
+                }
+            }
+        }
+        
+    },
+    "firestore": {
+        "indexes": "firestore.indexes.json"
+    }
+}
