--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,9 @@
 	<string>사진 라이브러리 접근이 필요한 이유를 설명하는 텍스트</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>사진 추가 기능이 필요한 이유를 설명하는 텍스트</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>이 앱은 안전한 이용을 위해 현재 위치 정보가 필요합니다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>이 앱은 안전한 이용을 위해 현재 위치 정보가 필요합니다.</string>
 </dict>
 </plist>
