--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
-  google_fonts: ^5.1.0
+  google_fonts: ^6.2.1
   flutter_svg: ^2.0.7
   intl: ^0.19.0
   provider: ^6.0.5
-  
+  flutter_dotenv: ^5.1.0
+    
   # Firebase
   firebase_core: ^3.0.3
   firebase_auth: ^5.0.3
@@ -28,7 +29,8 @@ dependencies:
   
   # Networking
   dio: ^5.3.4
-  connectivity_plus: ^5.0.2
+  http: ^1.1.0
+  connectivity_plus: ^6.1.4
   
   # Storage
   flutter_secure_storage: ^9.0.0
@@ -48,9 +50,10 @@ dependencies:
   jwt_decoder: ^2.0.1
   logger: ^2.0.2+1
   uuid: ^4.2.1
-  geolocator: ^10.1.0
   url_launcher: ^6.2.2
   dots_indicator: ^4.0.1
+  geocoding: ^2.1.1
+  geolocator: ^14.0.0
   # geoflutterfire2: ^2.3.15  # 호환성 문제로 일시적으로 비활성화
 
 dev_dependencies:
@@ -59,13 +62,15 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   mockito: ^5.4.0
-  flutter_lints: ^2.0.2
-  build_runner: ^2.3.3
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.7
   riverpod_generator: ^2.3.9
+  custom_lint: ^0.5.7
 
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/images/
     - assets/icons/
   fonts:
