--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   dots_indicator: ^4.0.1
   geocoding: ^2.1.1
   geolocator: ^14.0.0
+  json_annotation: ^4.9.0
   # geoflutterfire2: ^2.3.15  # 호환성 문제로 일시적으로 비활성화
 
 dev_dependencies:
@@ -66,6 +67,7 @@ dev_dependencies:
   build_runner: ^2.4.7
   riverpod_generator: ^2.3.9
   custom_lint: ^0.5.7
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
