--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,12 +47,12 @@
 	</array>
 	<!-- 카메라 접근 추가 -->
 	<key>NSCameraUsageDescription</key>
-	<string>카메라에 접근이 필요한 이유를 설명하는 텍스트</string>
+	<string>환불 요청 시 상품 상태를 촬영하기 위해 카메라 접근이 필요합니다.</string>
 	<!-- 사진 접근 추가 -->
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진 라이브러리 접근이 필요한 이유를 설명하는 텍스트</string>
+	<string>환불 요청 시 상품 사진을 첨부하기 위해 사진 라이브러리 접근이 필요합니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>사진 추가 기능이 필요한 이유를 설명하는 텍스트</string>
+	<string>환불 요청 관련 사진을 저장하기 위해 사진 라이브러리 접근이 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>이 앱은 안전한 이용을 위해 현재 위치 정보가 필요합니다.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
