--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   geolocator: ^12.0.0
   json_annotation: ^4.9.0
   web: ^1.1.1
+  image_picker: ^1.0.7
   # geoflutterfire2: ^2.3.15  # 호환성 문제로 일시적으로 비활성화
 
 dev_dependencies:
