chore: .gitignore 파일 업데이트
- tosspayments-llms.txt 추가
- Netlify 관련 파일 및 디렉토리 추가: netlify_build.sh, NETLIFY_DEPLOYMENT_GUIDE.md, netlify.toml, test_env.html

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ firebase.json
 .env.production
 
 tosspayments-llms.txt
+
+### Netlify ###
+netlify_build.sh
+NETLIFY_DEPLOYMENT_GUIDE.md
+netlify.toml
+test_env.html
